[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dsa-profiler-rishad"
version = "0.1.1"
description = "A local-first profiling tool to benchmark and compare DSA solution efficiency."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Testing",
]
dependencies = [
    "rich>=13.0.0",  
]

[tool.setuptools.packages.find]
where = ["src"]